fix: Add --no-fail-on-gate-failure flag for smoke testing
- Add --no-fail-on-gate-failure CLI flag to allow smoke tests to succeed even when gates fail
- Update eval-smoke workflow to use --no-fail-on-gate-failure for mock data testing
- CLI now exits gracefully with mock data instead of failing

--- a/.github/workflows/eval-smoke.yml
+++ b/.github/workflows/eval-smoke.yml
@@ -45,7 +45,8 @@ jobs:
             --seed 42 \
             --temperature 0.0 \
             --min-eligible-for-gates 15 \
-            --fail-on-fingerprint-mismatch
+            --fail-on-fingerprint-mismatch \
+            --no-fail-on-gate-failure
 
       - name: Enforce gates and fingerprints
         run: |
