feat: implement toy model directory organization and pipeline validation
- Add toys/ directory structure for organizing model outputs by type:
  * toys/pipeline/ - basic distillation pipeline validation (e2e tests)
  * toys/8ball/ - 8-ball classifier models
  * toys/binary/ - binary classifier models
  * toys/ternary/ - ternary classifier models

- Auto-organize outputs in training, GGUF conversion, and data generation scripts
- Rename 'toy' directory to 'pipeline' for clearer purpose indication
- Update toy type detection logic to use 'pipeline' instead of 'toy'
- Add comprehensive documentation for all toy model types
- Implement pipeline preservation evaluation framework
- Add binary and ternary classifier support with dedicated configs
- Create output formatters for all classifier types
- Update evaluation framework to support general classification tasks

All toy model outputs now automatically organize into appropriate subdirectories based on model type, providing cleaner project structure and better separation of concerns.

--- a/configs/memory_budgets.yaml
+++ b/configs/memory_budgets.yaml
@@ -49,6 +49,27 @@ memory_budgets:
       kv_cache_eviction_policy: "lru"
       max_memory_mb: 50000
 
+  # 8B Student Model
+  student_8b:
+    model_weights_mb: 8000  # INT8 weights (~8GB)
+    kv_cache_per_token_mb: 0.13  # FP16 KV cache per token
+    max_context_length: 4096
+
+    m1_max_64gb:
+      max_concurrent_sessions: 2
+      kv_cache_eviction_policy: "lru"
+      max_memory_mb: 50000
+
+    m2_max_64gb:
+      max_concurrent_sessions: 2
+      kv_cache_eviction_policy: "lru"
+      max_memory_mb: 50000
+
+    m3_max_64gb:
+      max_concurrent_sessions: 2
+      kv_cache_eviction_policy: "lru"
+      max_memory_mb: 50000
+
   # 7B Student Model
   student_7b:
     model_weights_mb: 7000  # INT8 weights (~7GB)
