chore: Remove large files from git tracking
- Remove 160MB mutants/training/distill_kd.py from git tracking
- Remove 76MB reports/readiness/todos.json from git tracking
- Update .gitignore to prevent future issues with large generated files

These are auto-generated test artifacts that shouldn't be in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,7 @@ internal/
 # Smoke test artifacts
 **/report.smoke.json
 **/results.smoke.jsonlmutants/
+
+# Large generated files
+reports/readiness/todos.json
+mutants/training/distill_kd.py
