Fix mock tokenizer lambda signatures for proper dict-like subscripting
- Fixed __getitem__ and __setitem__ lambda signatures to include self parameter
- Fixed keys(), values(), items(), get() lambdas for proper MagicMock behavior
- All critical dataset patterns now verified working correctly
- Tests: 1418 passed, 124 failed (9 additional tests now passing)

--- a/requirements-core.txt
+++ b/requirements-core.txt
@@ -3,6 +3,8 @@
 
 coremltools==9.0
 onnx==1.19.1
+onnxruntime>=1.18.0  # For ONNX inference testing
+onnxscript>=0.5.0  # Required for torch.onnx.export
 numpy<2.0.0  # PyTorch compatibility
 protobuf>=4.21.0,<5.0.0
 typing-extensions>=4.0.0
