Add KD dataset tooling and configure CE-only distillation for 3B test
- Add audit_kd_dataset.py: Generate markdown reports with statistics and quality checks
- Add filter_kd_dataset.py: Filter by length, dedupe, remove truncated responses
- Add test_kd_dataset_integrity.py: Automated validation for KD datasets
- Update student_3b_kd_test.yaml: Configure CE-only KD (kl_weight=0.0, ce_teacher=0.7, ce_gt=0.3)
- Enhance device_utils.py: Add MPS support with environment override and logging
- Enhance losses.py: Add guard for kl_weight>0 without teacher_logits
- Enhance teacher_client.py: Add tier override via MOONSHOT_TIER_OVERRIDE env var
- Enhance make_kd_mix.py: Add concurrency support (auto-detects from tier), incremental writes

Ready for 3B KD test run with 1000-sample dataset

--- a/configs/student_3b_kd_test.yaml
+++ b/configs/student_3b_kd_test.yaml
@@ -60,17 +60,18 @@ role: "worker"
 
 distillation:
   type: "standard_kd"
-  # First run: no teacher logits -> KL disabled
+  # CE-only KD: no teacher logits available, so KL divergence disabled
+  # This run validates the KD training loop, not perfect loss weighting
   kl_weight: 0.0
-  ce_teacher_weight: 0.5
-  ce_ground_truth_weight: 0.5
-  # Process-step supervision weights
-  w_tool: 0.15
-  w_args: 0.15
-  w_integr: 0.10
+  ce_teacher_weight: 0.7  # Emphasize teacher guidance
+  ce_ground_truth_weight: 0.3  # Ground truth still important
+  # Process-step supervision weights (keep low for v0)
+  w_tool: 0.0
+  w_args: 0.0
+  w_integr: 0.0
 
 kd:
-  teacher_endpoint: "https://api.kimi.com/v1"
+  teacher_endpoint: "https://api.moonshot.ai/v1"
   kd_temperature: 2.0
   teacher_logits_available: false  # Only teacher tokens/text for now
 
